fix: corrige valor do gap do main-container

--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -1,3 +1,3 @@
 $main-container-padding: 1rem;
-$main-container-gap: 1,5rem;
+$main-container-gap: 1rem;
 $main-container-radius: 1rem;
